--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "horsies",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "1904 - HappyhorsesTeam! Working on Grace Shopper!",
   "engines": {
     "node": ">= 7.0.0"
   },
