--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^4.1.1",
+    "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.2.0",
+    "@material-ui/styles": "^4.1.1",
     "axios": "^0.18.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
